# fastapi-clean-demo

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  current.sql  docker-compose.dev.yaml  docker-compose.test.yaml  docker-compose.yaml  drop.sql  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 0952731fa83d_add_link_and_tag_tables.py  537e302516b8_second_version.py  9b4ee4fde3d5_delete_book_table.py  c6ec6d05af2d_initial_commit.py
src/noname/: conf.py  db.py  main.py  models.py  utils.py
src/noname/services/: hostname.py  links.py
tests/: conftest.py  test_db.py  test_init.py  test_main.py  test_services.py
